# pico-toolkit-dev

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
hello-world/: CMakeLists.txt  hello-world.c
picolibc-tls-test/: CMakeLists.txt  pico-toolkit-flash.ld  picolibc-tls-test.c
tools/: C-kernel-codestyle-eclipse.xml  picolibc-rp2040.specs
tools/makefiles/: common.mk  cortex-m0plus.mk  debug.mk  host.mk  pi-pico.mk  project.mk  release.mk  rp2040.mk  setup.mk  target.mk  tree.mk
tools/scripts/: ide  mksrc  workspace-rc
tools/templates/: src-template.mk  subdir-template.mk  tree-template.mk
